fix: change overflow by popups

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -134,7 +134,6 @@
   justify-content: center;
   align-items: center;
   z-index: 22;
-  overflow-y: hidden;
 
   &__close {
     position: relative;
@@ -156,6 +155,9 @@
     z-index: 24;
     width: 42%;
     height: 100%;
+
+    height: 100%;
+    overflow-y: scroll;
   }
 
   &__block {
@@ -260,10 +262,9 @@
 
   .popup__wrapper {
     width: 100%;
-
   }
 
-  .popup__title1{
+  .popup__title1 {
     padding-top: 20px;
   }
 }
@@ -296,15 +297,15 @@
     line-height: 29px;
   }
 
-  .popup__title1{
+  .popup__title1 {
     font-size: 35px;
   }
 
-  .popup__block{
+  .popup__block {
     padding: 10px 20px;
   }
 
-  .popup__close-btn{
+  .popup__close-btn {
     top: 7px;
     right: 7px;
   }
